err/products.silvakupu.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/kupu'...
Listing './lib/python3.5/site-packages/Products/kupu/common'...
Listing './lib/python3.5/site-packages/Products/kupu/common/kupudrawers'...
Listing './lib/python3.5/site-packages/Products/kupu/common/kupudrawers/logos'...
Listing './lib/python3.5/site-packages/Products/kupu/common/kupuimages'...
Listing './lib/python3.5/site-packages/Products/kupu/common/kupupopups'...
Listing './lib/python3.5/site-packages/Products/kupu/default'...
Listing './lib/python3.5/site-packages/Products/kupu/doc'...
Listing './lib/python3.5/site-packages/Products/kupu/doc/reference'...
Listing './lib/python3.5/site-packages/Products/kupu/i18n'...
Listing './lib/python3.5/site-packages/Products/kupu/python'...
Compiling './lib/python3.5/site-packages/Products/kupu/python/nationalizer.py'...
***   File "./lib/python3.5/site-packages/Products/kupu/python/nationalizer.py", line 118
    raise TypeError, \
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/kupu/python/spellcheck.py'...
***   File "./lib/python3.5/site-packages/Products/kupu/python/spellcheck.py", line 126
    print 'okay'
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/kupu/tests'...
Listing './lib/python3.5/site-packages/Products/kupu/tools'...
Compiling './lib/python3.5/site-packages/Products/kupu/tools/convert_to_utf-8.py'...
***   File "./lib/python3.5/site-packages/Products/kupu/tools/convert_to_utf-8.py", line 12
    print 'Usage: %s <inputfile> <outputfile> [<encoding>]'
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/kupu/tools/makepox.py'...
***   File "./lib/python3.5/site-packages/Products/kupu/tools/makepox.py", line 93
    raise AttributeError, \
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.SilvaKupu-1.4.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
